fixed overflow issue

--- a/src/app/pages/about/about.component.css
+++ b/src/app/pages/about/about.component.css
@@ -7,9 +7,11 @@
     flex-direction: column;
     justify-content: center;
 }
-#goals .section1{
-    z-index:1;
+
+#goals .section1 {
+    z-index: 1;
 }
+
 #goals .splitcontainer .section2 {
     display: flex;
     flex-direction: column;
@@ -19,8 +21,8 @@
 #goals::before {
     position: absolute;
     content: "";
-    top:-5rem;
-    left:-5rem;
+    top: -5rem;
+    left: -5rem;
     width: 40rem;
     height: 40rem;
     background-color: var(--bluedark);
@@ -28,40 +30,42 @@
 
 }
 
-#tonext .section2{
+#tonext .section2 {
     flex: 2;
     gap: 2rem;
 }
 
-#tonext .section2 mat-card{
+#tonext .section2 mat-card {
     display: flex;
     flex-direction: column;
     padding: 2rem;
     gap: 1.5rem;
 }
 
-#tonext .section2 .bottomsection{
+#tonext .section2 .bottomsection {
     text-align: right;
 }
 
-#tonext .section2 .bottomsection h2{
-    font-size:1.8rem;
+#tonext .section2 .bottomsection h2 {
+    font-size: 1.8rem;
     font-weight: 400;
     margin-bottom: 0;
 }
 
-#tonext .section2 .bottomsection h3{
+#tonext .section2 .bottomsection h3 {
     font-size: 1.5rem;
     font-weight: 300;
     margin-bottom: 0;
 }
+
 @media only screen and (min-width:820px) {
     #goals .splitcontainer .section1 {
         display: flex;
         flex-direction: column;
         justify-content: center;
     }
-    #goals .splitcontainer .section1 mat-card{
+
+    #goals .splitcontainer .section1 mat-card {
         padding: 2rem 3rem;
     }
 }
@@ -69,5 +73,9 @@
 @media only screen and (max-width:820px) {
     #maincard .splitcontainer {
         flex-direction: column-reverse;
+    }
+
+    #goals {
+        overflow: hidden;
     }
 }
